--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -1,4 +1,52 @@
+body{
+    padding: 2em;
+}
+
 .site{
     max-width: 900px;
     margin: 0 auto;
+}
+
+.site-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    padding-bottom: 1em;
+    border-bottom: 2px solid #EEE;
+    margin-bottom: 2em;
+}
+
+.site-title{
+    margin-bottom: 0;
+}
+
+.site-footer{
+    padding-top: 1em;
+    border-top: 1px solid #EEE;
+    margin-top: 2em;
+}
+
+.site-footer p{
+    font-style: italic;
+    opacity: 0.5;
+}
+
+.site.blog{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2em;
+}
+
+.site.blog .site-header,
+.site.blog .site-footer{
+    flex: 0 0 100%;
+}
+
+.site.blog > main{
+    flex: 1 1 600px;
+}
+
+.site.blog > aside{
+    flex: 1 1 200px;
+
 }
