--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -14,7 +14,7 @@
         <nav class="main-nav">
           <ul>
             {% for item in site.data.navigation %}
-            <li><a href="{{item.link}}">{{item.name}}</a></li>
+            <li{% if page.permalink == item.link %} class="current-page"{% endif %}><a href="{{item.link}}">{{item.name}}</a></li>
             {% endfor %}
           </ul>
         </nav>
