--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -13,3 +13,9 @@
     text-decoration: none;
     padding: 0.5em 1em;
 }
+
+.main-nav li.current-page > a,
+.main-nav a:hover{
+    background: darkorange;
+    color: #fff;
+}
