--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,35 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/styles/site.css" />
-    <title>{{page.title}} - {{site.title}}</title>
-  </head>
-  <body>
-    <div class="site">
-      <header class="site-header">
-        <h1 class="site-title">{{ site.title }}</h1>
+{% include base/header.html %}
 
-        <nav class="main-nav">
-          <ul>
-            {% for item in site.data.navigation %}
-            <li{% if page.permalink == item.link %} class="current-page"{% endif %}><a href="{{item.link}}">{{item.name}}</a></li>
-            {% endfor %}
-          </ul>
-        </nav>
-      </header>
-      <article>
-        <header>
-          <h2>{{page.title}}</h2>
-        </header>
+<article>
+  <header>
+    <h2>{{page.title}}</h2>
+  </header>
 
-        <section>{{content}}</section>
-      </article>
+  <section>{{content}}</section>
+</article>
 
-      <footer class="site-footer">
-        <p>&copy; All rights reserved - 2024</p>
-      </footer>
-    </div>
-  </body>
-</html>
+{% include base/footer.html %}
