--- a/assets/styles/layout.css
+++ b/assets/styles/layout.css
@@ -18,6 +18,7 @@ body{
 
 .site-title{
     margin-bottom: 0;
+    line-height: 1;
 }
 
 .site-footer{
@@ -31,22 +32,22 @@ body{
     opacity: 0.5;
 }
 
-.site.blog{
+body.layout-blog .site{
     display: flex;
     flex-wrap: wrap;
     gap: 2em;
 }
 
-.site.blog .site-header,
-.site.blog .site-footer{
+body.layout-blog .site .site-header,
+body.layout-blog .site .site-footer{
     flex: 0 0 100%;
 }
 
-.site.blog > main{
+body.layout-blog .site > main{
     flex: 1 1 600px;
 }
 
-.site.blog > aside{
+body.layout-blog .site > aside{
     flex: 1 1 200px;
 
 }
