Added fom in contacts

--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -10,7 +10,7 @@
     <title>{{page.title}} - {{site.title}}</title>
     <link rel="stylesheet" href="/assets/styles/site.css" />
   </head>
-  <body class="layout-{{page.layout}}">
+  <body class="layout-{{page.layout}} page-{{page.title | slugify}}">
 
     <div class="site">
       <header class="site-header">
