--- a/assets/styles/navigation.css
+++ b/assets/styles/navigation.css
@@ -1,3 +1,8 @@
+.main-nav{
+    background: #fff;
+    padding: 1em;
+}
+
 .main-nav ul{
     display: flex;
     padding: 0;
@@ -9,6 +14,7 @@
 }
 
 .main-nav a{
+    display: block;
     color: orange;
     text-decoration: none;
     padding: 0.5em 1em;
