Added some animations

--- a/_includes/base/header.html
+++ b/_includes/base/header.html
@@ -9,6 +9,14 @@
     {% endif %}
     <title>{{page.title}} - {{site.title}}</title>
     <link rel="stylesheet" href="/assets/styles/site.css" />
+    <script>
+
+      window.addEventListener("load", (event) => {
+        document.querySelector('body').classList.add('loaded');
+      });
+    
+    </script>
+  
   </head>
   <body class="layout-{{page.layout}} page-{{page.title | slugify}}">
 
